<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg"
    tools:context=".AddRecordsActivity">

    <EditText
        android:id="@+id/meter_edittext"
        android:layout_width="220dp"
        android:layout_height="40dp"
        android:background="@color/edittext_bg"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/enter_distance_meters"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/second_edittext"
        app:layout_constraintEnd_toEndOf="@+id/add_record_textView"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/add_record_textView"
        app:layout_constraintTop_toBottomOf="@+id/add_record_textView"
        app:layout_constraintVertical_chainStyle="packed" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:contentDescription="@string/guage_picture"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintDimensionRatio="h,1000:625"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/speed_meter" />

    <TextView
        android:id="@+id/add_record_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/add_record"
        android:textColor="#FFFFFF"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/second_edittext"
        android:layout_width="220dp"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:background="@color/edittext_bg"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/enter_duration_seconds"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/save_button"
        app:layout_constraintEnd_toEndOf="@+id/meter_edittext"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/meter_edittext"
        app:layout_constraintTop_toBottomOf="@+id/meter_edittext" />

    <Button
        android:id="@+id/save_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/save"
        app:layout_constraintBottom_toTopOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="@+id/second_edittext"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/second_edittext"
        app:layout_constraintTop_toBottomOf="@+id/second_edittext" />

    <ImageView
        android:id="@+id/bull_img"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginEnd="25dp"
        android:contentDescription="@string/redbull"
        app:layout_constraintBottom_toTopOf="@+id/imageView"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.505"
        app:srcCompat="@drawable/red_cow" />
</androidx.constraintlayout.widget.ConstraintLayout>